      been reduced to 3.9.0.

      \item No default C++ compiler is set if no C++17 compiler is
      detected: there is no longer an automatic fallback to C++14 or
      C++11.

      Compilers from the last five years should have sufficient
      support: for others macros \code{CXX} and \code{CXXSTD} can be set
      in file \file{config.site} to provide a fallback if needed.
    }
  }

  \subsection{INSTALLATION on macOS}{
    \itemize{
      \item A new \command{configure} option \option{--with-newAccelerate}
      makes use of Apple's \sQuote{new} BLAS / LAPACK interfaces in their
      Accelerate framework.  Those interfaces are only available in macOS
      13.3 or later, and building requires \abbr{SDK} 13.3 or later (from the
      Command Line Tools or \I{Xcode} 14.3 or later).

      By default the option uses new Accelerate for BLAS calls: to also
      use it for LAPACK use option \option{--with-newAccelerate=lapack}.  The
      later interfaces provide LAPACK 3.9.1 rather than 3.2.1: 3.9.1 is
      from 2021-04 and does not include the improved algorithms
      introduced in LAPACK 3.10.0 (including for BLAS calls).
    }
  }

  \subsection{INSTALLATION on WINDOWS}{
    \itemize{
      \item The makefiles and installer scripts for Windows have been
      tailored to \I{Rtools44}, an update of the \I{Rtools43} toolchain.  It
      is based on GCC 13 and newer versions of \I{MinGW-W64}, \I{binutils}
      and libraries (targeting 64-bit Intel CPUs).  R-devel can no longer be
      built using \I{Rtools43} without changes.

      \I{Rtools44} has experimental support for 64-bit ARM (\I{aarch64}) CPUs via
      \I{LLVM} 17 toolchain using \command{lld}, \command{clang}/\command{flang-new} and \I{libc++}.
    }
  }


  %% \subsection{PACKAGE INSTALLATION}{
  %%   \itemize{
  %%     \item .
  %%   }
  %% }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} notes when S4-style exports are used